[package]
name = "bevy-hexes"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../bevy", features = ["dynamic"] }
bevy_rapier3d = { version = "0.16", features = ["debug-render"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy = { path = "../bevy" } # Necessary because we use a locally built bevy...
