[package]
name = "bevy_hexes"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy_rapier3d = { version = "0.16", features = ["debug-render"] }
bevy_trafo = { path = "../bevy_trafo" }
itertools = "0.10.3"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
